# devfrnd_package

./: .gitignore  LICENSE  pyproject.toml  requirements.txt
devfrnd-main/: README.md  pyproject.toml
devfrnd-main/src/: .gitignore  requirements.txt
devfrnd-main/src/devfrnd/: app.py
devfrnd-main/src/devfrnd/base_utils/: logger_utils.py
src/devfrnd/: app.py
src/devfrnd/db_migration_utils/: db_migrator.py
src/devfrnd/flask_helper_utils/: app_endpoints_fetcher.py
src/devfrnd/router/: db_migration_service.py  flask_helper_service.py
