[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "devfrnd"
version = "0.1.3"
authors = [
  { name="Srivikkash Gopinath", email="vikkassri@gmail.com" },
]
description = "Developer utilities to simplify common tasks"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
  "loguru>=0.7.2",
  "pymongo>=4.3.0",
  "click>=8.1.0",
  "rich>=13.0.0",
  "pandas>=2.0.0",
  "XlsxWriter>=3.1.0"
]

[project.urls]
Homepage = "https://github.com/Srivikkash/devfrnd_package"
Issues = "https://github.com/Srivikkash/devfrnd_package/issues"

[project.scripts]
devfrnd = "devfrnd.app:cli"